added version numbers

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div id="info" style="text-align:left; margin-top:20px;">
       <div>
          <div style ="font-size: 14px; font-family: Courier New">
+         version 1
            <div id="game_state"></div>
            <div id="instructions"></div>
          </div>
