--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       <script type="text/javascript" src="screens.js"></script>
       <script type="text/javascript" src="entities.js"></script>
       <script type="text/javascript" src="main.js"></script>
+      <script>alert("version 2");</script>
     </div>
     <div id="info" style="text-align:left; margin-top:20px;">
       <div>
          <div style ="font-size: 14px; font-family: Courier New">
-         version 1
            <div id="game_state"></div>
            <div id="instructions"></div>
          </div>
